nginx almost done

--- a/srcs/resources/requirements/nginx/conf/default.conf
+++ b/srcs/resources/requirements/nginx/conf/default.conf
@@ -4,6 +4,7 @@ server {
 
 	ssl_certificate /etc/ssl/mycerts/server.crt;
 	ssl_certificate_key /etc/ssl/mycerts/server.key;
+	ssl_protocols TLSv1.3;
 
 	root /var/www/html;
 	index index.html;
