--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,3 +6,12 @@ services:
         ports:
             - "443:443"
         restart: always
+    mariadb:
+        build:
+            context: ./requirements/mariadb/
+            dockerfile: Dockerfile
+        ports:
+            - "3306:3306"
+        env_file:
+            - .env
+        restart: always
