working in wordpress

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,8 @@
+#Mariadb Credentials
+
 MDB_ROOT_PASS=root1234
-MDB_DB=new_database
-MDB_USER=new_user
+MDB_DB=wordpress
+MDB_USER=main_user
 MDB_USER_PASS=user1234
+
+#Wordpress Credentials
