--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.19
 
-RUN apk upgrade && apk update && apk add nginx openssl
+RUN apk update && apk add nginx openssl
 RUN mkdir -p /etc/ssl/mycerts
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
 	-keyout /etc/ssl/mycerts/server.key -out /etc/ssl/mycerts/server.crt \
