--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,6 +9,8 @@ services:
             - .env
         networks:
             - docker_network
+        volumes:
+            - wp_website:/var/www/html
         depends_on:
             - wordpress
         restart: always
@@ -29,11 +31,22 @@ services:
             dockerfile: Dockerfile
         ports:
             - "9000:9000"
+        depends_on:
+            - mariadb
         env_file:
             - .env
+        volumes:
+            - wp_website:/var/www/html
         networks:
             - docker_network
         restart: always
 networks:
     docker_network:
         driver: bridge
+volumes:
+  wp_website:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/fmoran-m/data/wp_website
