--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.19
 
-RUN apk upgrade && apk update && apk add mariadb && apk add mysql && apk add mysql-client
+RUN apk update && apk add mariadb && apk add mysql && apk add mysql-client
 RUN mkdir -p /var/lib/mysql && chown -R mysql:mysql /var/lib/mysql
 RUN mkdir -p /run/mysqld && chown -R mysql:mysql /run/mysqld
 RUN mysql_install_db --user=mysql --datadir=/var/lib/mysql
