--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -49,4 +49,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/fmoran-m/data/wp_website
+      device: /home/$USER/wp_website
