wordpress works, the db does not

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,7 +2,7 @@ FROM alpine:3.20
 
 #Add php
 #Add tools for wordpress kit
-RUN apk update && apk add wget zip php82 php82-fpm php82-cgi
+RUN apk update && apk add wget zip php82 php82-fpm php82-cgi php82-mysqli
 
 #Add WP Zip
 RUN wget https://es.wordpress.org/latest-es_ES.zip
@@ -19,5 +19,6 @@ RUN chmod -R 755 var/www/html
 EXPOSE 9000
 
 COPY ./conf/www.conf /etc/php82/php-fpm.d/www.conf
+COPY ./conf/wp-config.php /var/www/html/wp-config.php
 
-ENTRYPOINT ["/usr/sbin/php-fpm82", "-F"]
+CMD ["/usr/sbin/php-fpm82", "-F"]
