--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
     nginx:
+        container_name: nginx
         build:
             context: ./requirements/nginx/
             dockerfile: Dockerfile
@@ -15,22 +16,20 @@ services:
             - wordpress
         restart: always
     mariadb:
+        container_name: mariadb
         build:
             context: ./requirements/mariadb/
             dockerfile: Dockerfile
-        ports:
-            - "3306:3306"
         env_file:
             - .env
         networks:
            - docker_network
         restart: always
     wordpress:
+        container_name: wordpress
         build:
             context: ./requirements/wordpress/
             dockerfile: Dockerfile
-        ports:
-            - "9000:9000"
         depends_on:
             - mariadb
         env_file:
