--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -48,4 +48,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/$USER/wp_website
+      device: /home/fmoran-m/wp_website
