--- a/srcs/.env
+++ b/srcs/.env
@@ -7,5 +7,8 @@ MDB_USER_PASS=user1234
 
 #Wordpress Credentials
 
-WP_ADMIN=user1234
+WP_ADMIN=inception1234
 WP_PASS=pass1234
+WP_USER=user1234
+WP_USER_PASS=userpass1234
+WP_USER_EMAIL=fakemail@gmail.com
