--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         networks:
             - docker_network
         volumes:
-            - wp_website:/var/www/html
+            - wp_website:/var/www/html/
         depends_on:
             - wordpress
         restart: always
@@ -25,7 +25,7 @@ services:
         networks:
            - docker_network
         volumes:
-            - wp_database:/var/lib/mysql
+            - wp_database:/var/lib/mysql/
         restart: always
     wordpress:
         container_name: wordpress
@@ -37,7 +37,7 @@ services:
         env_file:
             - .env
         volumes:
-            - wp_website:/var/www/html
+            - wp_website:/var/www/html/
         networks:
             - docker_network
         restart: always
